# flf-rust

./: .gitignore  Cargo.toml  GAP_ANALYSIS.md  PARITY_CHECKLIST.md  PORT_STATUS.md  README.md  index.html
.github/workflows/: ci.yml  pages.yml
game/: game.html  game.js
rust/: LICENSE  README.md  ai_bridge.js  ai_embedded.js  bootstrap.js  flf_bg.wasm.d.ts  index.html  peer_glue.js
rust/assets/LF2_19/: manifest.json
rust/assets/LF2_19/AI/: Challangar.json  Ninja.json  dumbass.json
rust/assets/LF2_19/UI/: UI.json
rust/assets/LF2_19/data/: data.json  davis_ball.json  deep_ball.json  (+20 more)
rust/css/: extra.css
rust/js/: ai_bridge.js  bootstrap.js  network_core.js  peer_glue.js
rust/pkg/: README.md  flf.d.ts  flf.js  flf_bg.wasm  flf_bg.wasm.d.ts  package.json
src/: lib.rs
src/core_engine/: animator.rs  collision.rs  combodec.rs  controller.rs  controller_changer.rs  controller_recorder.rs  effects_pool.rs  math.rs  mod.rs  network_sync.rs  resourcemap.rs  sprite.rs  support.rs  touch.rs  util.rs
src/lf/: ai.rs  background.rs  character.rs  character_ids.rs  character_states.rs  data.rs  effect.rs  effects_pool.rs  factories.rs  global.rs  livingobject.rs  loader.rs  manager.rs  match_game.rs  mechanics.rs  mod.rs  network.rs  package.rs  scene.rs  soundpack.rs  special_states.rs  specialattack.rs  sprite.rs  stage.rs  touchcontroller.rs  transistor.rs  util.rs  util_lf.rs  weapon.rs  weapon_states.rs
tests/: parity_surface.rs  tu_order.rs
www/: index.html  tu_compare.html
www/assets/LF2_19/: resourcemap.json
www/css/: extra.css
www/js/: ai_bridge.js  bootstrap.js  flobby.js  tu_harness.js
www/pkg/: README.md  flf.d.ts  flf.js  flf_bg.wasm  flf_bg.wasm.d.ts
(+33 files in other folders)
